--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Registrasi">
+
+        <activity android:name=".Login"
+            android:theme="@style/noBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,20 +19,45 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity" />
-            <!--android:theme="@style/noBar" />-->
-        <activity android:name=".DetailProduk" />
+            android:name=".Registrasi"
+            android:label="Registrasi">
+        </activity>
+        <activity android:name=".MainActivity" />
+        <!-- android:theme="@style/noBar" /> -->
         <activity android:name=".ListProduk" />
-        <activity android:name=".OrderForm" />
-        <activity android:name=".CheckOrderForm" />
-        <activity android:name=".CartOrderForm" />
-        <activity android:name=".PaymentConfirmation" />
-        <activity android:name=".FAQ"
-            android:parentActivityName=".FAQ"/>
-        <activity android:name=".TermsConditions"
-            android:parentActivityName=".TermsConditions"/>
-        <activity android:name=".About"
-            android:parentActivityName=".About"/>
+        <activity
+            android:name=".DetailProduk"
+            android:label="Detail Produk"
+            android:parentActivityName=".ListProduk" />
+        <activity
+            android:name=".OrderForm"
+            android:label="Order Form"
+            android:parentActivityName=".DetailProduk" />
+        <activity
+            android:name=".CheckOrderForm"
+            android:label="Order Form"
+            android:parentActivityName=".OrderForm" />
+        <activity
+            android:name=".CartOrderForm"
+            android:label="Order Form"
+            android:parentActivityName=".CartOrderForm" />
+        <activity
+            android:name=".PaymentConfirmation"
+            android:label="Payment Confirmation"
+            android:parentActivityName=".CartOrderForm" />
+        <activity
+            android:name=".FAQ"
+            android:label="FAQ"
+            android:parentActivityName=".FAQ" />
+        <activity
+            android:name=".TermsConditions"
+            android:label="Terms &amp; Conditions"
+            android:parentActivityName=".TermsConditions" />
+        <activity
+            android:name=".About"
+            android:label="About"
+            android:parentActivityName=".About" />
+
     </application>
 
 </manifest>
